--- a/project.config.json
+++ b/project.config.json
@@ -53,6 +53,14 @@
 					"id": -1,
 					"name": "pages/category/main",
 					"pathName": "pages/category/main",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "搜索列表",
+					"pathName": "pages/goods_list/main",
+					"query": "key=曲面电视",
 					"scene": null
 				}
 			]
