--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": false,
 		"postcss": true,
 		"minified": true,
@@ -21,7 +21,7 @@
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
-	"appid": "wx9ff421d386cb5ec9",
+	"appid": "wxd2e55e7509436536",
 	"projectname": "mpvue_yougou",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
