--- a/src/app.json
+++ b/src/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/home/main",
     "pages/goods_list/main",
+    "pages/search_page/main",
     "pages/item/main",
     "pages/cart/main",
     "pages/category/main",
