完成了搜索列表搜索关键字

--- a/project.config.json
+++ b/project.config.json
@@ -70,6 +70,13 @@
 					"pathName": "pages/item/main",
 					"query": "goods_id=701",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "搜索列表",
+					"pathName": "pages/search_page/main",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
